--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,16 @@
 Package: fledgingr
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: R Bindings To 'Sudachi.rs'
+Description: 'Sudachi' is a Japanese morphological analyzer by 'Works Applications'.
+Version: 0.0.0.9001
 Authors@R: 
     person("Hiroaki", "Yutani", , "yutani.ini@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-3385-7233"))
-Description: What the package does (one paragraph).
+Imports:
+  cli,
+  curl,
+  rappdirs,
+  withr
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
