--- a/src/Makevars.win.in
+++ b/src/Makevars.win.in
@@ -23,11 +23,11 @@ $(STATLIB):
 		ar -r libgcc_eh.a gcc_mock.o && \
 		cp libgcc_eh.a libgcc_s.a
 
-	 export CARGO_TARGET_X86_64_PC_WINDOWS_GNU_LINKER="$(CARGO_LINKER)" && export LIBRARY_PATH="$${LIBRARY_PATH};$(CURDIR)/$(LIBDIR)/libgcc_mock" && cargo +$(TOOLCHAIN) build --target=$(TARGET) --lib --release --manifest-path=./rust/Cargo.toml
-	
+	@BEFORE_CARGO_BUILD@ cargo +$(TOOLCHAIN) build --target=$(TARGET) --lib --release --manifest-path=./rust/Cargo.toml
+	@AFTER_CARGO_BUILD@
 
 C_clean:
-	rm -Rf $(SHLIB) $(OBJECTS) $(STATLIB)
+	rm -Rf $(SHLIB) $(OBJECTS) @CLEAN_EXTRA@
 
 clean:
 	rm -Rf $(SHLIB) $(OBJECTS) $(STATLIB) rust/target
