--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -22,7 +22,6 @@ jobs:
         config:
           - {os: windows-latest, r: 'release',  rust: 'stable-gnu', rtools-version: '42'}
           - {os: windows-latest, r: 'devel',    rust: 'stable-gnu', rtools-version: '42'}
-          - {os: windows-latest, r: 'oldrel',   rust: 'stable-msvc'}
           - {os: macOS-latest,   r: 'release',  rust: 'stable'     }
           - {os: ubuntu-20.04,   r: 'release',  rust: 'stable'     }
           - {os: ubuntu-20.04,   r: 'devel',    rust: 'stable'     }
@@ -42,17 +41,10 @@ jobs:
           toolchain: ${{ matrix.config.rust }}
           default: true
 
-      - name: Additional Rust set up for Windows (R >= 4.2)
+      - name: Additional Rust set up for Windows
         if: runner.os == 'Windows' && matrix.config.r != 'oldrel'
         run: |
           rustup target add x86_64-pc-windows-gnu
-
-      - name: Additional Rust set up for Windows (R < 4.2)
-        if: runner.os == 'Windows' && matrix.config.r == 'oldrel'
-        run: |
-          rustup target add i686-pc-windows-gnu
-          rustup target add x86_64-pc-windows-gnu
-
 
       - uses: r-lib/actions/setup-r@v2
         id: install-r
@@ -74,19 +66,14 @@ jobs:
 
       # Upload prebuilt binaries for Windows
       - name: Tweak staticlib on Windows
-        if: runner.os == 'Windows'
+        if: runner.os == 'Windows' && matrix.config.r == 'release'
         run: |
           # list all staticlibs
           find ./check -name libfledgingr.a
 
           mkdir ./staticlib
 
-          if ( "$(Rscript -e 'cat(R.version$crt)')".Equals('ucrt') ) {
-            mv ./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src/rust/target/x86_64-pc-windows-gnu/release/libfledgingr.a staticlib/ucrt-x86_64-pc-windows-gnu-libfledgingr.a
-          } else {
-            mv ./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src-x64/rust/target/x86_64-pc-windows-gnu/release/libfledgingr.a staticlib/x86_64-pc-windows-gnu-libfledgingr.a
-            mv ./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src-i386/rust/target/i686-pc-windows-gnu/release/libfledgingr.a staticlib/i686-pc-windows-gnu-libfledgingr.a
-          }
+          mv ./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src/rust/target/x86_64-pc-windows-gnu/release/libfledgingr.a staticlib/x86_64-pc-windows-gnu-libfledgingr.a
 
           ls ./staticlib
         shell: pwsh
