--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{ matrix.config.rust }}
           default: true
