--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -9,7 +9,7 @@ all: C_clean
 $(SHLIB): $(STATLIB)
 
 $(STATLIB):
-	@BEFORE_CARGO_BUILD@ cargo build --lib --release --manifest-path=./rust/Cargo.toml
+	@BEFORE_CARGO_BUILD@ cargo build --verbose --lib --release --manifest-path=./rust/Cargo.toml
 	@AFTER_CARGO_BUILD@
 
 C_clean:
