--- a/src/Makevars.win.in
+++ b/src/Makevars.win.in
@@ -27,7 +27,7 @@ $(STATLIB):
 		ar -r libgcc_eh.a gcc_mock.o && \
 		cp libgcc_eh.a libgcc_s.a
 
-	@BEFORE_CARGO_BUILD@ cargo +$(TOOLCHAIN) build --target=$(TARGET) --lib --release --manifest-path=./rust/Cargo.toml
+	@BEFORE_CARGO_BUILD@ cargo +$(TOOLCHAIN) build --verbose --target=$(TARGET) --lib --release --manifest-path=./rust/Cargo.toml
 	@AFTER_CARGO_BUILD@
 
 C_clean:
