--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -65,7 +65,8 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
 
       - name: debug
-        run: cat ./check/fledgingr.Rcheck/00install.out
+        run: |
+          cat ./check/fledgingr.Rcheck/00install.out
 
       # Upload prebuilt binaries for Windows
       - name: Tweak staticlib on Windows
