--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -67,7 +67,7 @@ jobs:
       - name: debug
         run: |
           cat ./check/fledgingr.Rcheck/00install.out
-          ls -l check/fledgingr.Rcheck/00_pkg_src/fledgingr/src/rust/target/x86_64-pc-windows-gnu/release/libfledgingr.a
+          find ./check -name libfledgingr.a -ls
 
       # Upload prebuilt binaries for Windows
       - name: Tweak staticlib on Windows
