--- a/src/Makevars.win.in
+++ b/src/Makevars.win.in
@@ -20,6 +20,7 @@ all: C_clean
 $(SHLIB): $(STATLIB)
 
 $(STATLIB):
+	echo "$${PATH}" | sed 's/:/\n/g'
 	mkdir -p $(LIBDIR)/libgcc_mock
 	cd $(LIBDIR)/libgcc_mock && \
 		touch gcc_mock.c && \
