--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -35,25 +35,25 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Rust
+      - name: Set up Rust (non-Windows)
         uses: dtolnay/rust-toolchain@stable
+        if: runner.os != 'Windows'
         with:
           toolchain: ${{ matrix.config.rust }}
-          default: true
 
-      - name: Additional Rust set up for Windows
-        if: runner.os == 'Windows' && matrix.config.r != 'oldrel'
-        run: |
-          rustup target add x86_64-pc-windows-gnu
+      - name: Set up Rust (Windows)
+        uses: dtolnay/rust-toolchain@stable
+        if: runner.os == 'Windows'
+        with:
+          toolchain: ${{ matrix.config.rust }}
+          target: x86_64-pc-windows-gnu
 
       - uses: r-lib/actions/setup-r@v2
         id: install-r
         with:
           r-version: ${{ matrix.config.r }}
           rtools-version: ${{ matrix.config.rtools-version }}
-          # TODO: Enable RSPM where possible
-          use-public-rspm: false
-          # use-public-rspm: ${{ matrix.config.r != 'devel' }}
+          use-public-rspm: true
 
       - uses: r-lib/actions/setup-pandoc@v2
 
@@ -68,14 +68,15 @@ jobs:
         run: |
           cat ./check/fledgingr.Rcheck/00install.out
           find ./check -name libfledgingr.a -ls
-          find ./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src/rust/target/ -type f -ls
+          find ./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src/rust/target/ -type f -name '*.a' -ls
+          find ./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src/rust/target/ -type f -name '*.rlib' -ls
 
       # Upload prebuilt binaries for Windows
       - name: Tweak staticlib on Windows
         if: runner.os == 'Windows' && matrix.config.r == 'release'
         run: |
           # list all staticlibs
-          find ./check -name libfledgingr.a
+          find ./check -name libfledgingr.a -ls
 
           mkdir ./staticlib
 
@@ -89,7 +90,7 @@ jobs:
         if: runner.os == 'macOS' && matrix.config.r == 'release'
         run: |
           # list all staticlibs
-          find ./check -name libfledgingr.a
+          find ./check -name libfledgingr.a -ls
 
           mkdir ./staticlib
 
