--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -124,9 +124,10 @@ jobs:
       - name: Checksum
         run: |
           cd staticlib
-          sha256sum * > sha256sums.txt
+          sha256sum * > ../sha256sums.txt
 
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           files: 'staticlib/*'
+          body_path: sha256sums.txt
