--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -8,4 +8,4 @@ crate-type = ["staticlib"]
 
 [dependencies]
 extendr-api = "0.3"
-sudachi = { git = "https://github.com/WorksApplications/sudachi.rs/" }
+sudachi = { git = "https://github.com/WorksApplications/sudachi.rs", tag = "v0.6.5" }
