--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -80,7 +80,7 @@ jobs:
 
           mkdir ./staticlib
 
-          mv ./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src/rust/target/x86_64-pc-windows-gnu/release/libfledgingr.a staticlib/x86_64-pc-windows-gnu-libfledgingr.a
+          mv ./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src/rust/target/x86_64-pc-windows-gnu/debug/.libfledgingr.a staticlib/x86_64-pc-windows-gnu-libfledgingr.a
 
           ls ./staticlib
         shell: pwsh
@@ -95,12 +95,12 @@ jobs:
           mkdir ./staticlib
 
           # Intel macOS
-          mv ./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src/rust/target/release/libfledgingr.a staticlib/x86_64-apple-darwin-libfledgingr.a
+          mv ./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src/rust/target/debug/.libfledgingr.a staticlib/x86_64-apple-darwin-libfledgingr.a
 
           # For M1 macOS
           rustup target add aarch64-apple-darwin
           . "${HOME}/.cargo/env" && cargo build --target=aarch64-apple-darwin --lib --release --manifest-path=./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src/rust/Cargo.toml
-          mv ./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src/rust/target/aarch64-apple-darwin/release/libfledgingr.a staticlib/aarch64-apple-darwin-libfledgingr.a
+          mv ./check/fledgingr.Rcheck/00_pkg_src/fledgingr/src/rust/target/aarch64-apple-darwin/debug/.libfledgingr.a staticlib/aarch64-apple-darwin-libfledgingr.a
 
           ls ./staticlib
         shell: pwsh
