--- a/src/Makevars.win.in
+++ b/src/Makevars.win.in
@@ -11,7 +11,7 @@ CARGO_LINKER = x86_64-w64-mingw32.static.posix-gcc.exe
 
 CRATE_NAME = fledgingr
 
-LIBDIR = ./rust/target/$(TARGET)/release
+LIBDIR = ./rust/target/$(TARGET)/debug
 PKG_LIBS = -L$(LIBDIR) -l$(CRATE_NAME) -lws2_32 -ladvapi32 -luserenv -lbcrypt
 STATLIB = $(LIBDIR)/lib$(CRATE_NAME).a
 
@@ -27,7 +27,7 @@ $(STATLIB):
 		ar -r libgcc_eh.a gcc_mock.o && \
 		cp libgcc_eh.a libgcc_s.a
 
-	@BEFORE_CARGO_BUILD@ cargo +$(TOOLCHAIN) build --verbose --target=$(TARGET) --lib --release --manifest-path=./rust/Cargo.toml
+	@BEFORE_CARGO_BUILD@ cargo +$(TOOLCHAIN) build --verbose --target=$(TARGET) --lib --manifest-path=./rust/Cargo.toml
 	@AFTER_CARGO_BUILD@
 
 C_clean:
