--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,6 @@ Package: fledgingr
 Title: R Bindings To 'Sudachi.rs'
 Description: 'Sudachi' is a Japanese morphological analyzer by 'Works Applications'.
 Version: 0.0.0.9003
-URL: https://yutannihilation.github.io/fledgingr/
 Authors@R: 
     person("Hiroaki", "Yutani", , "yutani.ini@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-3385-7233"))
@@ -13,10 +12,13 @@ Imports:
   curl,
   rappdirs,
   withr
+URL: https://yutannihilation.github.io/fledgingr/, https://github.com/yutannihilation/fledgingr
+BugReports: https://github.com/yutannihilation/fledgingr/issues
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
+SystemRequirements: Cargo (rustc package manager)
 Config/fledgingr/crate_name: fledgingr
 Config/fledgingr/github_repo: yutannihilation/fledgingr
 Config/fledgingr/github_tag: build_20220718-9
